EN-2407 Changed password encoding to bcrypt + refactoring (#788)
* EN-2407 Changed password encoding to bcrypt + refactoring

* EN-2407 Further improvements

* Test fix

* Removed utility class due to MOXy incompatibility

* Replaced custom BlowfishEncryptor with standard Spring encryptor